--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Diana</title>
+         <link rel="icon" type="image/png" href="images/favicon.png" />
         <link rel="stylesheet" href="style.css" media="screen">
     </head>
     <body>
